[build-system]
requires = [
    "hatchling>=1.6",
]
build-backend = "hatchling.build"

[project]
name = "highcharts-maps"
description = "High-end Map Data Visualization for the Python Ecosystem"
readme = "README.rst"
license-files = { paths = ["LICENSE"] }

dynamic = [
     "version"
]

authors = [
    { name = "HCP LLC", email = "support@highchartspython.com" }
]

keywords = [
    "highcharts",
    "data visualization",
    "data viz",
    "charts",
    "graphing",
    "highcharts maps",
    "plotting",
    "gis",
    "maps",
    "geospatial"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",

    "Framework :: Jupyter",

    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: GIS",

    "License :: Other/Proprietary License"
]

requires-python = ">= 3.10"
dependencies = [
    "highcharts-core>=1.5.0",
    "esprima>=4.0.1",
    "validator-collection>=1.5.0",
    "requests>=2.31.0",
    "topojson>=1.5",
    "geojson>=3.0"
]

[tool.hatch.version]
path = "highcharts_maps/__version__.py"

[project.urls]
"Homepage" = "https://www.highchartspython.com"
"Documentation" = "https://maps-docs.highchartspython.com/en/latest/"
"Support" = "https://www.highchartspython.com/get-help"
"Source Code" = "https://github.com/highcharts-for-python/highcharts-maps"
"History" = "https://github.com/highcharts-for-python/highcharts-maps/blob/master/CHANGES.rst"
"Bug Tracker" = "https://github.com/highcharts-for-python/highcharts-maps/issues"
"Demo" = "https://github.com/highcharts-for-python/highcharts-for-python-demos"
"Sponsor" = "https://github.com/sponsors/highcharts-for-python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.2",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
    "python-dotenv>=1.0.0",
    "pytz>=2022.1",
    "Sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
    "sphinx-toolbox==3.4.0",
    "sphinx-tabs==3.4.1",
    "tox>=4.0.0",
    "IPython>=8.10.0",
    "pyspark>=3.3.0",
    "pandas>=1.3.3",
    "orjson>=3.7.7",
    "IPython>=8.10.0",
    "pyspark>=3.3.0",
    "pandas>=1.3.3",
    "orjson>=3.7.7",
    "geopandas>=0.11.1",
    "pyshp>=2.3.1"
]
soft = [
    "IPython>=8.10.0",
    "pyspark>=3.3.0",
    "pandas>=1.3.3",
    "orjson>=3.7.7",
    "geopandas>=0.11.1",
    "pyshp>=2.3.1"
]
docs = [
    "Sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
    "sphinx-toolbox==3.4.0",
    "sphinx-tabs==3.4.1"
]